--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </h1>
         <div>
             <a href="https://priconne-grandmasters.jp/">
-                <img  src="app_icon.png" alt="app_icon" />
+                <img  src="app_icon.png" alt="공식 " />
             </a>
         </div>
     </header>
