--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html lang="ko" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -13,7 +13,7 @@
         </h1>
         <div>
             <a href="https://priconne-grandmasters.jp/">
-                <img  src="app_icon.png" alt="공식 " />
+                <img  src="app_icon.png" alt="app_icon" />
             </a>
         </div>
     </header>
@@ -28,15 +28,16 @@
         
         <h2 id="home-id">기간한정 캠페인 현재 진행중!</h2>
         <h3>2023 April Fool's Day Campaign (4/1 ~ 4/10 16:59)</h3>
+        <h3>2023 프리코네 그랜드마스터즈 한국 서비스 시작!!! (6.29 ~ 7월 중)</h3>
         
-        <h3>프 토 체 스 10일간 기간 한정 서비스!</h3>
+        <h3 id="uma">프 토 체 스  기간 한정 서비스!</h3>
 
 
         <h2> 수치 정보 </h2>
         <li>리더 HP : 50</li>
         <li>리더 패배 데미지 : (남은 유닛 개체수)*2 + (라운드 기본 데미지)</li>
             <ol> ㅡ 라운드 기본 데미지   <BR>1~5R : 0 <BR>6~10R : 2 <BR>11~15R : 6 <BR>16~20R : 8</ol>
-        <li>리더 Lv에 따른 레어리티</li>
+        <!-- <li>리더 Lv에 따른 레어리티</li>
         <table>
             <tr>
                 <th scopr="col" style="uma">Lv.</th>
@@ -53,7 +54,7 @@
                 <td>0%</td>
                 <td>0%</td>
                 <td>0%</td>
-        </table>
+        </table> -->
 
 
         <div>
@@ -385,7 +386,7 @@
             장비 이름은 공식 번역을 따릅니다. <br>
             장비 성능에 대해서는 공식 홈페이지의 정보를 따릅니다.<br>
             <br><br>
-            Ver.230408 업데이트 진행중
+            Ver.230628 업데이트 진행중
 
             <br>
             <br>
@@ -402,8 +403,8 @@
     <asdie>
         <h2>NOTICE</h2><br>
         <div id="uma"><h3>옆 동네</h3></div>
-        사지타리우스배 챔피언스 미팅 개최 예정!<br>
-        4월 중반 접수 신청
+        신규 시나리오 - Make a new track!! 추가! <br>
+        6월 레전드 레이스 절찬 진행중!
     </asdie>
     <footer>
         CSS Practice Page <br>
